Add /v1/user/<user_id>/achievements endpoint
